<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">daapr</string>
    <string name="email">username</string>
    <string name="password">password</string>
    <string name="signin">sign in</string>
    <string name="app_id">1397311873871771</string>
    <string name="create_account"><u>Don\'t have an account?</u></string>
    
    <string name="user">Alice Meng</string>
    <string name="user_first_name">Alice</string>
    <string name="card_title">Sample Title: Charlie the Unicorn Makes National Team</string>
    <string name="card_source">Source: Universal Sports</string> 
    <string name="time">3 months ago</string>
    <string name="test_card_name">Charlie the Unicorn</string>
    
    <string name="notifications">Notifications</string>
    <string name="add_post">Add a post</string>
    <string name="discover_users">Discover users</string>
    <string name="action_settings">Settings</string>
    
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    
    <string name="reshare_string">Reshare</string>
    
    <string name="signout">Sign Out</string>
    <string name="refresh">Refresh</string>

    
</resources>
