<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myfirstapp.MainActivity" >

    <item android:id="@+id/action_profile"
          android:title="@string/user_first_name"
          app:showAsAction="always" />
    <item android:id="@+id/action_notifications"
          android:title="@string/notifications"
          app:showAsAction="always"
          android:icon="@drawable/notification" />
    <item android:id="@+id/action_add_post"
          android:title="@string/add_post"
          app:showAsAction="always"
          android:icon="@drawable/addition" />
    <item android:id="@+id/action_discover_users"
          android:title="@string/discover_users"
          app:showAsAction="ifRoom"
          android:icon="@drawable/people" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/addition"
          app:showAsAction="never" />

</menu>
