<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/daapr_gray" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" 
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >
        
	    <!-- ImageView
            android:id="@+id/daapr_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/daapr_logo"
            android:contentDescription="Daapr Logo" /> 
            	        android:layout_below="@+id/daapr_logo"
            -->
	    
        <Button 
	        android:id="@+id/signin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/authButton"
	        android:layout_alignRight="@+id/authButton"
	        android:layout_centerInParent="true"
	        android:background="@color/daapr_red"
	        android:textColor="@color/white"
	        android:text="@string/signin"
	        android:layout_below="@+id/password_et"
	    />
        
        <com.facebook.widget.LoginButton
	        android:id="@+id/authButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_below="@+id/signin"
        />
	    
	    <EditText
	        android:id="@+id/username_et"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress"
	        android:textSize="20sp"
	    />
	    
	    <EditText
	        android:id="@+id/password_et"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:textSize="20sp"
	        android:layout_below="@+id/username_et"
	    />
	    
	    
    </RelativeLayout>
    
    <TextView
        android:id="@+id/testing"
        android:text="original text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
	    android:id="@+id/userInfoTextView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginLeft="20dp"
	    android:layout_marginTop="20dp"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:visibility="invisible"
	/>

</LinearLayout>
